5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2563.log
== TEST (2019-06-04 11:48:25) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:49:17) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))
aprov = 0
#laço
while(size(notas)> 2):
	
	
#condiçao
for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
File "XXXX", line 10
    for x in notas:
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:49:36) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))
aprov = 0
#laço
while(size(notas)> 2):
	
	
#condiçao
for x in notas:
	if(notas >=5 and notas < 7):
		aprov = aprov + 1
			
print(aprov)
-- ERROR:
File "XXXX", line 10
    for x in notas:
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:04) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:11) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:16) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:22) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:52) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:53) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:50:58) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:51:03) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:54:41) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(notas >=5 and notas < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:55:23) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(x >=5 and x < 7):
			aprov = aprov + 1
			
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:57:45) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("insira")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(x >=5 and x < 7):
			aprov = aprov + 1
			
	notas = array(eval(input("insira as notas:")))
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:57:50) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("insira")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(x >=5 and x < 7):
			aprov = aprov + 1
			
	notas = array(eval(input("insira as notas:")))
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:57:56) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("insira:")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(x >=5 and x < 7):
			aprov = aprov + 1
			
	notas = array(eval(input("insira as notas:")))
print(aprov)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:58:39) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("insira:")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(x >=5 and x < 7):
			aprov = aprov + 1
	print(aprov)
	notas = array(eval(input("insira as notas:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 11:59:05) 
-- CODE:
from numpy import *
#vetor notas
notas = array(eval(input("insira:")))

#laço
while(size(notas)> 2):
	aprov = 0
	
#condiçao
	for x in notas:
		if(x >=5 and x < 7):
			aprov = aprov + 1
	print(aprov)
	notas = array(eval(input("insira as notas:")))

-- EXECUTION TIME:
1.12719
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
